# transformer_recmodel

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: requirements.txt  two_tower_rank_model.ipynb
src/: config.py  dataset.py  features.py
src/data/: dataset.py  download_dataset.py  preprocessor.py
src/grocery/: README.md  pyproject.toml
src/grocery/src/grocery/metrics/: __init__.py  aspects.py  base.py  quality.py
src/grocery/src/grocery/models/: __init__.py  als.py
src/grocery/src/grocery/recommender/: __init__.py  candidates.py  features.py  primitives.py  recommender.py  reranking.py
src/grocery/src/grocery/utils/: __init__.py  dataset.py  viewer.py
src/model/: model.py  train_models.py
src/modeling/: finetune.py  pretrain.py  utils.py
